force-app/main/default/objects/cgc_sync__Sync_Debug_Session__mdt/cgc_sync__Sync_Debug_Session__mdt.object-meta.xml
<CustomObject>
    <description>Enumerates a list of Device IDs (UUID to be exact) and the from/to time range in which they should be marked as &quot;debugging enabled&quot;.</description>
    <label>Sync Debug Session</label>
    <pluralLabel>Sync Debug Sessions</pluralLabel>
</CustomObject>