force-app/main/default/objects/cgc_sync__Sync_Debug_Session__mdt/fields/cgc_sync__Device_ID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_ID__c</fullName>
    <description>The client device&apos;s UUID which we are enabling debugging for. You can place the asterisk/wildcard character here to define a debugging session for any and all devices =&gt; *</description>
    <inlineHelpText>The client device&apos;s UUID which we are enabling debugging for. You can place the asterisk/wildcard character here to define a debugging session for any and all devices =&gt; *</inlineHelpText>
    <label>Device Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>