force-app/main/default/objects/cgc_sync__Sync_Debug_Session__mdt/fields/cgc_sync__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Start_Date_Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>The instant in time when debugging should be considered enabled FROM.</description>
    <inlineHelpText>The instant in time when debugging should be considered enabled FROM.</inlineHelpText>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>